--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,89 @@
-version: "3.9"
 services:
+  # ==========================
+  # LARAVEL APP (PHP + Nginx)
+  # ==========================
   app:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: laravel_app
+    restart: unless-stopped
+    working_dir: /var/www
     volumes:
       - ./backend:/var/www
-    depends_on:
-      - mysql
-    networks:
-      - laravel
-
-  mysql:
-    image: mysql:8
-    container_name: laravel_mysql
-    restart: always
+      - ./backend/storage:/var/www/storage
+      - ./backend/bootstrap/cache:/var/www/bootstrap/cache
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    volumes:
-      - mysql_data:/var/lib/mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=laravel
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+    depends_on:
+      - db
     networks:
-      - laravel
+      - laravel_net
 
+  # ==========================
+  # NGINX SERVER
+  # ==========================
   nginx:
-    image: nginx:alpine
+    image: nginx:latest
     container_name: laravel_nginx
-    restart: always
+    restart: unless-stopped
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
-      - .:/var/www
+      - ./backend:/var/www
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     networks:
-      - laravel
+      - laravel_net
+
+  # ==========================
+  # MYSQL DATABASE
+  # ==========================
+  db:
+    image: mysql:8.0
+    container_name: laravel_db
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: laravel
+    ports:
+      - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - laravel_net
+
+  # ==========================
+  # PHPMYADMIN
+  # ==========================
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: laravel_phpmyadmin
+    restart: unless-stopped
+    environment:
+      PMA_HOST: db
+      PMA_USER: root
+      PMA_PASSWORD: root
+    ports:
+      - "8081:80"
+    depends_on:
+      - db
+    networks:
+      - laravel_net
+
+# ==========================
+# NETWORK & VOLUME
+# ==========================
+networks:
+  laravel_net:
+    driver: bridge
 
 volumes:
-  mysql_data:
-
-networks:
-  laravel:
-    driver: bridge
+  db_data:
