--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     index index.php index.html;
     server_name localhost;
+
     root /var/www/public;
 
     location / {
@@ -11,9 +12,8 @@ server {
     location ~ \.php$ {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
