--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,35 @@ services:
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - app_data:/var/www        # <--- tambahkan ini
+      - ./backend:/var/www
       - ./backend/storage:/var/www/storage
       - ./backend/bootstrap/cache:/var/www/bootstrap/cache
+      - app_data:/var/www 
     environment:
       - DB_HOST=db
       - DB_PORT=3306
+      - TZ=Asia/Jakarta
     depends_on:
       - db
     networks:
       - laravel_net
-
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.80'
+    command: >
+      sh -c "echo '* * * * * cd /var/www && /usr/local/bin/php artisan schedule:run >> /var/www/storage/logs/laravel-scheduler.log 2>&1' > /etc/cron.d/laravel-cron
+      && chmod 0644 /etc/cron.d/laravel-cron
+      && crontab /etc/cron.d/laravel-cron
+      && cron
+      && php-fpm
+      && php artisan queue:work --sleep=1 --tries=3 --timeout=120"
   # ==========================
   # NGINX SERVER
   # ==========================
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     container_name: laravel_nginx
     restart: unless-stopped
     ports:
@@ -33,12 +46,16 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
        # mount read-only dari container app (bukan host)
-      - app_data:/var/www:ro     
+      - app_data:/var/www:ro         
     depends_on:
       - app
     networks:
       - laravel_net
-
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: '0.50'
   # ==========================
   # MYSQL DATABASE
   # ==========================
@@ -59,14 +76,18 @@ services:
     command: --default-authentication-plugin=mysql_native_password            
     networks:
       - laravel_net
-
+    deploy:
+      resources:
+        limits:
+          memory: 768M
+          cpus: '1.00'
   # ==========================
   # PHPMYADMIN
   # ==========================
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: laravel_phpmyadmin
-    restart: unless-stopped
+    restart: no
     environment:
       PMA_HOST: db
       UPLOAD_LIMIT: 64M
@@ -77,34 +98,13 @@ services:
       - db
     networks:
       - laravel_net
-  # ==========================
-  # LARAVEL SCHEDULER (CRON)
-  # ==========================
-  scheduler:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: laravel_scheduler
-    restart: unless-stopped
-    working_dir: /var/www
-    volumes:
-      - ./backend/storage:/var/www/storage
-    command: >
-      sh -c "echo '* * * * * cd /var/www && /usr/local/bin/php artisan schedule:work >> /var/www/storage/logs/laravel-scheduler.log 2>&1' > /etc/cron.d/laravel-scheduler
-      && chmod 0644 /etc/cron.d/laravel-scheduler
-      && crontab /etc/cron.d/laravel-scheduler
-      && touch /var/www/storage/logs/cron.log
-      && cron -f"
-    depends_on:
-      - app
-    environment:
-      - TZ=Asia/Jakarta
-    networks:
-      - laravel_net
-
-volumes:
-  db_data:
-  app_data:
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.50'      
+  
+  
 # ==========================
 # NETWORK & VOLUME
 # ==========================
@@ -112,5 +112,7 @@ networks:
   laravel_net:
     driver: bridge
 
-
+volumes:
+  db_data:
+  app_data:
 
