perbaikan supervisor queue

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,27 +1,35 @@
 [supervisord]
 nodaemon=true
+logfile=/var/www/storage/logs/supervisord.log
+pidfile=/var/run/supervisord.pid
+childlogdir=/var/www/storage/logs
 
 [program:php-fpm]
 command=php-fpm
 autostart=true
 autorestart=true
-priority=1
+priority=10
+stdout_logfile=/var/www/storage/logs/php-fpm.log
+stderr_logfile=/var/www/storage/logs/php-fpm-error.log
 
-[program:queue-worker]
-command=php artisan queue:work --sleep=1 --tries=3 --timeout=120
+[program:laravel-queue]
+command=php /var/www/artisan queue:work --sleep=2 --tries=3 --timeout=120
 directory=/var/www
 autostart=true
 autorestart=true
-startretries=3
+priority=20
+stdout_logfile=/var/www/storage/logs/queue.log
+stderr_logfile=/var/www/storage/logs/queue-error.log
 stopasgroup=true
 killasgroup=true
-stdout_logfile=/var/www/storage/logs/queue-worker.log
-stderr_logfile=/var/www/storage/logs/queue-worker-error.log
-priority=2
 
 [program:laravel-scheduler]
-command=sh -c "echo '* * * * * cd /var/www && php artisan schedule:run >> /var/www/storage/logs/laravel-scheduler.log 2>&1' | crontab - && cron -f"
+command=php /var/www/artisan schedule:work
 directory=/var/www
 autostart=true
 autorestart=true
-priority=3
+priority=30
+stdout_logfile=/var/www/storage/logs/scheduler.log
+stderr_logfile=/var/www/storage/logs/scheduler-error.log
+stopasgroup=true
+killasgroup=true
