--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,19 @@
+[unix_http_server]
+file=/var/run/supervisor.sock   ; tempat socket
+chmod=0777                      ; izinkan semua akses
+
 [supervisord]
 nodaemon=true
 logfile=/var/www/storage/logs/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/www/storage/logs
+user=root
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
 
 [program:php-fpm]
 command=php-fpm
